update to Navbar in home.handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,18 @@
-<h1>Example App: Home</h1>
+<div class="mainNav">
+    <div class="container">
+        <ul class="nav navbarStyle">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Mongo Scraper</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/saved">Saved Articles</a>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="scrapeBtn btn btn-danger">SCRAPE NEW ARTICLES</button>
+            </li>
+        </ul>
+    </div>
+</div>
