--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,8 +11,14 @@
                 <a class="nav-link" href="/saved">Saved Articles</a>
             </li>
             <li class="nav-item">
-                <button type="button" class="scrapeBtn btn btn-danger">SCRAPE NEW ARTICLES</button>
+                <button type="button" class="scrapeBtn btn btn-danger">SCRAPE NEW ARTICLES!</button>
             </li>
         </ul>
+    </div>
+</div>
+<div class="jumbotron">
+    <div class="centerTitle">
+        <h1 class="display-4 scrapeTech">Mongo Scraper</h1>
+        <p class="lead scrapeInfo">Dallas Morning News Edition</p>
     </div>
 </div>
