update to article container & footer in home.handlebars

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -22,3 +22,10 @@
         <p class="lead scrapeInfo">Dallas Morning News Edition</p>
     </div>
 </div>
+<div class="article-container">
+</div>
+<footer class="footer">
+    <div class="container">
+        <p>Dallas Morning News Mongo Scraper</p>
+    </div>
+</footer>
