update to article container & footer in save.handlebars

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,1 +1,29 @@
-<h1>Example App: Saved</h1>
+<<div class="mainNav">
+    <div class="container">
+        <ul class="nav navbarStyle">
+            <li class="nav-item">
+                <a class="nav-link active">Mongo Scraper</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/saved">Saved Articles</a>
+            </li>
+        </ul>
+    </div>
+    </div>
+
+    <div class="jumbotron">
+        <div class="centerTitle">
+            <h1 class="display-4 scrapeTech">Mongo Scraper</h1>
+            <p class="lead scrapeInfo">Dallas Morning News Edition</p>
+        </div>
+    </div>
+    <div class="article-container">
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <p>Dallas Morning News Mongo Scraper</p>
+        </div>
+    </footer>
