--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -2,7 +2,7 @@
     <div class="container">
         <ul class="nav navbarStyle">
             <li class="nav-item">
-                <a class="nav-link active">Mongo Scraper</a>
+                <a class="nav-link active">Saved Articles</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
