--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -27,3 +27,28 @@
             <p>Dallas Morning News Mongo Scraper</p>
         </div>
     </footer>
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Notes for Article</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="currentNotes">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="col-form-label">Message:</label>
+                        <textarea class="form-control" id="message-text"></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default saveNote" data-dismiss="modal">SAVE NOTE</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
